fix(csp): replace MDX runtime evaluation with react-markdown
Replace @content-collections/mdx useMDXComponent (uses Function())
with react-markdown to resolve CSP unsafe-eval violation. Add
rehype-raw for HTML parsing and update content files to use
single-line HTML format.

--- a/content/resources/en/index.mdx
+++ b/content/resources/en/index.mdx
@@ -4,15 +4,15 @@ description: A sovereign decentralised technology stack and social movement to r
 locale: en
 ---
 
-Logos is a social movement that aims to revitalise civil society. We build, maintain, and deploy tools for civil organising on a decentralised, peer-to-peer technology stack. These tools enable us to experiment and cooperate, solving real issues and improving our own lives where legacy counterparts have failed us. 
+Logos is a social movement that aims to revitalise civil society. We build, maintain, and deploy tools for civil organising on a decentralised, peer-to-peer technology stack. These tools enable us to experiment and cooperate, solving real issues and improving our own lives where legacy counterparts have failed us.
 
-Passionately open source, we thrive only through the voluntary contributions of those who share our values. If that’s you, please contribute your skills, knowledge, and ideas to the movement via Logos Contribute. 
+Passionately open source, we thrive only through the voluntary contributions of those who share our values. If that’s you, please contribute your skills, knowledge, and ideas to the movement via Logos Contribute.
 
 # Logos technologies
 
 Logos is a complete technology stack that provides all the infrastructure needed to deploy truly decentralised applications. The system's technical foundation is a hybrid microkernel-microservices architecture that initially combines three existing core protocols:
 
-- **Blockchain**: robust privacy guarantees defend the sovereignty of users and network operators. 
+- **Blockchain**: robust privacy guarantees defend the sovereignty of users and network operators.
 
 - **Messaging**: peer-to-peer messaging protocols protect the right to communicate without surveillance or censorship.
 
@@ -20,17 +20,17 @@ Logos is a complete technology stack that provides all the infrastructure needed
 
 Applications deployed on Logos communicate using self-describing RDF-star data formats, enabling nodes to dynamically discover and load modules while maintaining privacy. This plugin-based architecture allows the network to evolve and adapt, creating an impartial medium for agreements between parties, from individuals to civil society organisations and nation states.
 
-By combining maximal privacy preservation with runtime composability, Logos provides a foundation for parallel social, financial, and political institutions that remain resistant to capture and corruption. This architecture enables competitive governance, where institutions must earn support by actually improving people’s lives. 
+By combining maximal privacy preservation with runtime composability, Logos provides a foundation for parallel social, financial, and political institutions that remain resistant to capture and corruption. This architecture enables competitive governance, where institutions must earn support by actually improving people’s lives.
 
-All Logos technologies are open source and built as a community. We invite developers to contribute code to strengthen these technologies and build tools to promote freedom and novel modes of cooperation on the Logos stack. 
+All Logos technologies are open source and built as a community. We invite developers to contribute code to strengthen these technologies and build tools to promote freedom and novel modes of cooperation on the Logos stack.
 
 # The Logos movement
 
-Logos technologies exist to improve the lives of real people that existing systems have routinely failed. A passionate, aligned social movement is responsible for building and maintaining the technology stack, as well as deploying tools built on it in local communities worldwide. 
+Logos technologies exist to improve the lives of real people that existing systems have routinely failed. A passionate, aligned social movement is responsible for building and maintaining the technology stack, as well as deploying tools built on it in local communities worldwide.
 
-The technologies we build find real-world applications through the Logos Circles initiative. Logos Circles are groups of individuals who identify issues facing local communities worldwide and work together to address them. Circles are an experiment in parallel organising, and they empower individuals by restoring agency, trust, and civic power. The initiative is central to our effort to restore civil society. 
+The technologies we build find real-world applications through the Logos Circles initiative. Logos Circles are groups of individuals who identify issues facing local communities worldwide and work together to address them. Circles are an experiment in parallel organising, and they empower individuals by restoring agency, trust, and civic power. The initiative is central to our effort to restore civil society.
 
-We invite anyone who believes that real change is possible through grassroots organising and civil initiatives to join or form a Logos Circle in their community. 
+We invite anyone who believes that real change is possible through grassroots organising and civil initiatives to join or form a Logos Circle in their community.
 
 <br />
 <br />
@@ -38,7 +38,7 @@ We invite anyone who believes that real change is possible through grassroots or
 <a
   href="https://github.com/logos-co"
   target="_blank"
-  className="cursor-pointer border border-black px-4 py-2 text-black"
+  className="cursor-pointer border border-black px-4 py-2 text-black no-underline"
 >
   <span>Join our devs</span>
 </a>
