--- a/content/resources/fr/index.mdx
+++ b/content/resources/fr/index.mdx
@@ -38,7 +38,7 @@ Nous invitons toute personne convaincue que des changements réels sont possible
 <a
   href="https://github.com/logos-co"
   target="_blank"
-  className="cursor-pointer border border-black px-4 py-2 text-black"
+  className="cursor-pointer border border-black px-4 py-2 text-black no-underline"
 >
   <span>Rejoindre nos développeurs</span>
 </a>
