--- a/content/resources/ko/index.mdx
+++ b/content/resources/ko/index.mdx
@@ -28,7 +28,7 @@ Logos는 임시 자치 구역, 메타 헤이븐, 사이버 국가, 또는 최근
 <a
   href="https://github.com/logos-co"
   target="_blank"
-  className="cursor-pointer border border-black px-4 py-2 text-black"
+  className="cursor-pointer border border-black px-4 py-2 text-black no-underline"
 >
   <span>GitHub에서 코드 보기</span>
 </a>
