Typo in developers.mdx

--- a/content/resources/fr/developers.mdx
+++ b/content/resources/fr/developers.mdx
@@ -38,6 +38,6 @@ Si vous souhaitez contribuer à Logos en tant que développeur, vous pouvez soum
 - Dupliquer le dépôt (_fork_) et créer une branche de fonctionnalité (_feature branch_)
 - Écrire du code propre et bien documenté en suivant nos directives de style
 - Inclure des tests complets pour les nouvelles fonctionnalités
-- Soumettre une demande de tirage (_pull request_) avec une description claire des changements
+- Soumettre une demande de triage (_pull request_) avec une description claire des changements
 - Répondre rapidement aux commentaires de la revue de code
 - S’assurer que les vérifications CI/CD réussissent avant la fusion
