refactor: update proposal submission process to direct users to the Logos forum

--- a/content/resources/en/developers.mdx
+++ b/content/resources/en/developers.mdx
@@ -10,7 +10,7 @@ As an open-source project, Logos is not just a collection of individual contribu
 
 Our culture is based on meritocracy, shared ownership, common responsibility, and transparent governance. Contributions to the community – code, content, ideas – are recognised and rewarded through roles that enable deeper participation in the network.
 
-If you're interested in contributing to Logos as a developer, you can submit a proposal via the [proposal form](/proposals).
+If you're interested in contributing to Logos as a developer, create a post with your proposal in the [Logos forum](https://forum.logos.co/).
 
 <br />
 
