--- a/content/resources/en/translators.mdx
+++ b/content/resources/en/translators.mdx
@@ -4,7 +4,7 @@ description: A guide to contributing to Logos as a translator.
 locale: en
 ---
 
-If you're interested in translating Logos, you can submit a proposal via the [proposal form](/proposals).
+If you're interested in translating Logos, create a post with your proposal in the [Logos forum](https://forum.logos.co/).
 
 <br />
 
