--- a/content/resources/fr/activists.mdx
+++ b/content/resources/fr/activists.mdx
@@ -6,7 +6,7 @@ locale: fr
 
 Des personnes ordinaires jouent un rôle crucial dans Logos. Vous contribuez à transformer les technologies décentralisées en impacts réels, à donner du pouvoir aux communautés, à identifier les menaces aux libertés civiles et à créer des stratégies locales qui font progresser l’autonomie et la liberté.
 
-Si vous souhaitez contribuer à Logos au niveau local, vous pouvez soumettre une proposition [via le formulaire de proposition](/proposals).
+Si vous souhaitez contribuer à Logos au niveau local, créez un post avec votre proposition sur le [forum Logos](https://forum.logos.co/).
 
 <br />
 
