--- a/content/resources/fr/designers.mdx
+++ b/content/resources/fr/designers.mdx
@@ -4,7 +4,7 @@ description: Un guide pour contribuer à Logos en tant que designer.
 locale: fr
 ---
 
-Si vous souhaitez concevoir pour Logos, vous pouvez soumettre une proposition via le [formulaire de proposition](/proposals).
+Si vous souhaitez concevoir pour Logos, créez un post avec votre proposition sur le [forum Logos](https://forum.logos.co/).
 
 - **Design UI/UX** : Créer des designs d'interface utilisateur et des améliorations d'expérience utilisateur
 - **Assets de marque** : Concevoir des logos, des illustrations et du matériel marketing
