--- a/content/resources/fr/developers.mdx
+++ b/content/resources/fr/developers.mdx
@@ -10,7 +10,7 @@ En tant que projet _open source_, Logos n'est pas seulement un ensemble de contr
 
 Notre culture repose sur la méritocratie, la propriété partagée, la responsabilité commune et la gouvernance transparente. Les contributions à la communauté — code, contenu, idées — sont reconnues et récompensées par des rôles permettant une participation plus active au réseau.
 
-Si vous souhaitez contribuer à Logos en tant que développeur, vous pouvez soumettre une proposition via le [formulaire de proposition](/proposals).
+Si vous souhaitez contribuer à Logos en tant que développeur, créez un post avec votre proposition sur le [forum Logos](https://forum.logos.co/).
 
 <br />
 
