--- a/content/resources/fr/event-organisers.mdx
+++ b/content/resources/fr/event-organisers.mdx
@@ -4,7 +4,7 @@ description: Un guide pour contribuer à Logos en tant qu'organisateur d'événe
 locale: fr
 ---
 
-Si vous souhaitez organiser des événements pour Logos, vous pouvez soumettre une proposition via le [formulaire de proposition](/proposals).
+Si vous souhaitez organiser des événements pour Logos, créez un post avec votre proposition sur le [forum Logos](https://forum.logos.co/).
 
 <br />
 
