--- a/content/resources/fr/how-to-contribute.mdx
+++ b/content/resources/fr/how-to-contribute.mdx
@@ -6,7 +6,7 @@ locale: fr
 
 Bienvenue chez Logos ! Nous sommes ravis que vous nous rejoigniez pour façonner le web décentralisé. Que vous soyez développeur, rédacteur, designer, ou que vous apportiez d'autres compétences précieuses, il existe de nombreuses façons de vous impliquer et d'avoir un impact.
 
-Pour commencer, vous pouvez soumettre vos idées ou projets via le [formulaire de proposition](/proposals).
+Pour commencer, créez un post avec votre proposition sur le [forum Logos](https://forum.logos.co/).
 
 Vous pouvez également explorer des guides personnalisés en fonction de vos compétences :
 
