--- a/content/resources/ko/activists.mdx
+++ b/content/resources/ko/activists.mdx
@@ -6,7 +6,7 @@ locale: ko
 
 Everyday people working to improve lives at the local level play a crucial role in Logos. You help translate decentralised technology into real-world impact, empower communities, identify threats to civil liberties, and create local strategies that advance autonomy and freedom.
 
-If you're interested in contributing to Logos at the local level, you can submit a proposal [via the proposal form](/proposals).
+If you're interested in contributing to Logos at the local level, create a post with your proposal in the [Logos forum](https://forum.logos.co/).
 
 <br />
 
