--- a/content/resources/ko/how-to-contribute.mdx
+++ b/content/resources/ko/how-to-contribute.mdx
@@ -6,7 +6,7 @@ locale: ko
 
 Logos에 오신 것을 환영합니다! 탈중앙화된 웹을 함께 만들어가는 여정에 동참해주셔서 기쁩니다. 개발자, 작가 등 어떤 전문성을 가졌든, Logos에 참여하고 기여할 수 있는 방법은 다양합니다.
 
-가장 먼저, [제안서 양식](/proposals)을 통해 여러분의 아이디어나 프로젝트를 제출해보세요.
+가장 먼저, [Logos 포럼](https://forum.logos.co/)에 여러분의 제안이 담긴 게시글을 작성해보세요.
 
 또는, 아래 전문 분야별 가이드에서 각자에게 맞는 기여 방법을 찾아보세요.
 
