--- a/content/resources/ko/translators.mdx
+++ b/content/resources/ko/translators.mdx
@@ -4,7 +4,7 @@ description: 번역가로서 Logos에 기여하는 방법을 안내합니다.
 locale: ko
 ---
 
-Logos 콘텐츠 번역에 참여하고 싶으시다면, [제안서 양식](/proposals)을 통해 제안서를 제출해주세요.
+Logos 콘텐츠 번역에 참여하고 싶으시다면, [Logos 포럼](https://forum.logos.co/)에 제안이 담긴 게시글을 작성해주세요.
 
 <br />
 
