--- a/content/resources/en/designers.mdx
+++ b/content/resources/en/designers.mdx
@@ -4,7 +4,7 @@ description: A guide to contributing to Logos as a designer.
 locale: en
 ---
 
-If you're interested in designing for Logos, you can submit a proposal via the [proposal form](/proposals).
+If you're interested in designing for Logos, create a post with your proposal in the [Logos forum](https://forum.logos.co/).
 
 - **UI/UX design**: Create user interface designs and user experience improvements
 - **Brand assets**: Design logos, illustrations, and marketing materials
