--- a/content/resources/en/event-organisers.mdx
+++ b/content/resources/en/event-organisers.mdx
@@ -4,7 +4,7 @@ description: A guide to contributing to Logos as an event organiser.
 locale: en
 ---
 
-If you're interested in organising events for Logos, you can submit a proposal via the [proposal form](/proposals).
+If you're interested in organising events for Logos, create a post with your proposal in the [Logos forum](https://forum.logos.co/).
 
 <br />
 
