--- a/content/resources/en/how-to-contribute.mdx
+++ b/content/resources/en/how-to-contribute.mdx
@@ -6,7 +6,7 @@ locale: en
 
 Welcome to Logos! We're thrilled to have you join us in shaping the decentralised web. Whether you're a developer, writer, designer, or bring other valuable skills, there are plenty of ways to get involved and make an impact.
 
-To get started, you can submit your ideas or projects through the [proposal form](/proposals).
+To get started, create a post with your proposal in the [Logos forum](https://forum.logos.co/).
 
 You can also explore tailored guides on how to contribute based on your skills:
 
