--- a/content/resources/fr/writers.mdx
+++ b/content/resources/fr/writers.mdx
@@ -4,7 +4,7 @@ description: Un guide pour contribuer à Logos en tant que rédacteur.
 locale: fr
 ---
 
-Si vous souhaitez écrire pour Logos, vous pouvez soumettre une proposition via le [formulaire de proposition](/proposals).
+Si vous souhaitez écrire pour Logos, créez un post avec votre proposition sur le [forum Logos](https://forum.logos.co/).
 
 <br />
 
