--- a/content/resources/ko/event-organisers.mdx
+++ b/content/resources/ko/event-organisers.mdx
@@ -4,7 +4,7 @@ description: 이벤트 기획자로서 Logos에 기여하는 방법을 안내합
 locale: ko
 ---
 
-Logos 커뮤니티를 위한 이벤트를 기획하고 싶으시다면, [제안서 양식](/proposals)을 통해 아이디어를 제출해주세요.
+Logos 커뮤니티를 위한 이벤트를 기획하고 싶으시다면, [Logos 포럼](https://forum.logos.co/)에 제안이 담긴 게시글을 작성해주세요.
 
 <br />
 
